# echo-cleaner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  EchoCleaner-1.0.0-x86_64.AppImage  EchoCleaner-1.1.0-x86_64.AppImage.sha256  EchoCleaner-x86_64.AppImage  LICENSE  Makefile  PROJECT_SUMMARY.md  PUBLISH_RELEASE.md  QUICKSTART.md  README.md  SCREENSHOTS.md  USER_GUIDE.md  build_appimage.sh  echo-cleaner.desktop  echo-cleaner.py  echo-clear.desktop  echo-clear.py  install.sh  pyproject.toml  requirements.txt  test.py  uninstall.sh  validate.py
.github/: FUNDING.yml  copilot-instructions.md
app/: __init__.py  main.py
app/assets/: README.md  __init__.py
app/models/: __init__.py  scan_item.py
app/modules/: __init__.py  base_cleaner.py  dev_dependencies_cleaner.py  docker_cleaner.py  kubernetes_cleaner.py  log_cleaner.py  package_manager_cleaner.py  system_cache_cleaner.py  trash_cleaner.py
app/services/: __init__.py  cleaning_service.py  subcategory_service.py
app/ui/: __init__.py  custom_dialog.py  main_window.py  subcategory_widget.py
data/: README.md  io.github.paladini.EchoCleaner.desktop  io.github.paladini.EchoCleaner.metainfo.xml
docs/: SCREENSHOTS.md
screenshots/: README.md
scripts/: build_appimage.sh  install.sh  release_v1.3.0.sh  uninstall.sh
tools/: README.md
